# caiodonalisio-website

./: .env.dev  .gitignore  README.md  docker-compose.yml  dockerfile  entrypoint.sh  gunicorn_config.py  pyproject.toml
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/: login.html
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_post_description.py  0003_alter_post_update_date_book.py  0004_remove_book_separator.py  0005_alter_post_flags.py  0006_alter_post_flags.py  0007_rename_update_date_post_updated_at_and_more.py
blog/templates/: index.html
monitor_estante_virtual/: admin.py  apps.py  crawler.py  data_parser.py  dataparser.py  estantevirtual_dicts.py  forms.py  models.py  query_transformer.py  urls.py  utils.py  views.py
monitor_estante_virtual/migrations/: 0001_initial.py
monitor_estante_virtual/templates/: query.html
nginx/: nginx.conf
pages/: tests.py  urls.py  views.py
pages/templates/: gif_display.html
website/: settings.py  urls.py
