[tool.poetry]
name = "caiodonalisio-website"
version = "0.1.0"
description = "Personal Website"
authors = ["Caio Donalisio <caio.donalisio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
