[tool.poetry]
name = "caiodonalisio-website"
version = "0.1.0"
description = "Personal Website"
authors = ["Caio Donalisio <caio.donalisio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.1"
psycopg2-binary = "^2.9.9"
gunicorn = "^23.0.0"
whitenoise = "^6.7.0"
pillow = "^10.4.0"
bs4 = "^0.0.2"
httpx = "^0.27.2"
lxml = "^5.3.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
bs4 = "^0.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
